; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_alloc.c_uiprivAlloc.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_alloc.c_uiprivAlloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXTRA = common dso_local global i64 0, align 8
@allocations = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @uiprivAlloc(i64 %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i64 %0, i64* %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i64, i64* @EXTRA, align 8
  %7 = load i64, i64* %3, align 8
  %8 = add i64 %6, %7
  %9 = call i8* @g_malloc0(i64 %8)
  store i8* %9, i8** %5, align 8
  %10 = load i64, i64* %3, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = call i64* @SIZE(i8* %11)
  store i64 %10, i64* %12, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = call i8** @TYPE(i8* %14)
  store i8* %13, i8** %15, align 8
  %16 = load i32, i32* @allocations, align 4
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 @g_ptr_array_add(i32 %16, i8* %17)
  %19 = load i8*, i8** %5, align 8
  %20 = call i8* @DATA(i8* %19)
  ret i8* %20
}

declare dso_local i8* @g_malloc0(i64) #1

declare dso_local i64* @SIZE(i8*) #1

declare dso_local i8** @TYPE(i8*) #1

declare dso_local i32 @g_ptr_array_add(i32, i8*) #1

declare dso_local i8* @DATA(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
